--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec babel-node src/index.js",
+    "build": "babel src/ --out-dir dist",
+    "serve": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,10 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.5",
     "morgan": "^1.10.0"
   }
 }
