--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Waru",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
