--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Waru",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.5"
   },
